# szl

./: pyproject.toml
szl/repository/: base.py  models.py  schemas.py  session.py
tests/unit/: conftest.py  test_repository.py
