[tool.poetry]
name = "szl"
version = "0.1.0"
description = ""
authors = ["bhmt <0xps@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"


[tool.pytest.ini_options]
asyncio_mode = "auto"
